--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <!---NO BORRAR - estilos css-->
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <!---NO BORRAR - cdn de bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
@@ -18,33 +18,33 @@
         <!---Inicio Menu-->
         <nav class="navbar navbar-expand-lg mainBg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">
-                    <img src="./img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center ms-3"></a>
+                <a class="navbar-brand" href="/index.html">
+                    <img src="/img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center ms-3"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/nosotros.html">Quienes somos</a>
+                            <a class="nav-link" href="/pages/nosotros.html">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/joyas.html">Joyas</a>
+                            <a class="nav-link" href="/pages/joyas.html">Joyas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/joyeros.html">Joyeros</a>
+                            <a class="nav-link" href="/pages/joyeros.html">Joyeros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/blog.html">Blog</a>
+                            <a class="nav-link" href="/pages/blog.html">Blog</a>
                         </li>
                     </ul>
                     <span class="navbar-text">
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/cuenta.html">
-                                <img src="./img/usuario.png" alt="usuario" class="usuario">
+                            <a class="nav-link" href="/pages/cuenta.html">
+                                <img src="/img/usuario.png" alt="usuario" class="usuario">
                             </a>
                         </li>
                     </span>
@@ -58,20 +58,20 @@
         <h1 class="titulo">Somos Lumina</h1>
         <section>
             <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime.</p>
-            <img src="./img/persona.jpeg" alt="Quienes somos">
+            <img class="imgperfil" src="/img/persona.jpeg" alt="quienes somos">
         </section>
     </main>
     <!---Inicio Contenido-->
     <footer>
-        <a href="./index.html">
-            <img src="./img/lumina-logo.png" alt="Logo" class="d-inline-block textoLogo"></a>
+        <a href="/index.html">
+            <img src="/img/lumina-logo.png" alt="Logo" class="d-inline-block textoLogo"></a>
         <ul class="pie">
-            <li><a class="negrita" href="./pages/nosotros.html">Quienes somos</a></li>
-            <li><a class="negrita" href="./pages/blog.html">Blog</a><li>
+            <li><a class="negrita" href="/pages/nosotros.html">Quienes somos</a></li>
+            <li><a class="negrita" href="/pages/blog.html">Blog</a><li>
             <br>
             <li class="negrita">Mi cuenta:</li>
-            <li><a href="./pages/cuenta.html">Inicia sesión</a></li>
-            <li><a href="./pages/cuenta.html">Registrate</a></li>
+            <li><a href="/pages/cuenta.html">Inicia sesión</a></li>
+            <li><a href="/pages/nosotros.html">Registrate</a></li>
         </ul>
 
         <ul class="pie">
