--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg mainBg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center ms-3"></a>
+                    <img src="./img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -55,7 +55,40 @@
     <!---Fin Menu-->
     <!---Inicio contenido-->
     <main>
-        <img src="./img/vitrina-joyas.jpeg" alt="vitrina" class="vitrina">
+        <div id="carouselExampleCaptions" class="carousel slide vitrina">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/vitrina-joyas.jpeg" class="d-block w-100 vitrina" alt="vitrina joyas">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-vitrina">+1000 productos</h3>
+                        <p class="texto-vitrina">El mejor lugar para encontrar tu joya perfecta</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/vitrina-dos.jpeg" class="d-block w-100 vitrina" alt="vitrina dos">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-vitrina">¡20%DCTO!</h3>
+                        <p class="texto-vitrina">La pulsera perfecta porfin ha llegado</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+
+
+        <!---<img src="./img/vitrina-joyas.jpeg" alt="vitrina" class="vitrina">-->
         <!---Inicio categorias
         <h1 class="titulo">Categorias</h1>-->
         <section class="categorias">
