actualizado el css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="navbar-text">
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/cuenta.html">
-                                <img src="./img/usuario.png" alt="usuario" class="usuario">
+                                <img src="./img/avatar.png" alt="usuario" class="usuario">
                             </a>
                         </li>
                     </span>
