pagina de joyas terminada

--- a/pages/joyas.html
+++ b/pages/joyas.html
@@ -55,11 +55,15 @@
     <!---Fin Menu-->
     <!---Inicio contenido-->
     <main>
-        <h1 class="titulo">Joyas</h1>
-        <section><!---Inicio categorias-->
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <!---Inicio categorias-->
+        <section class="container">
+            <h1 class="tituloGrid">Joyas</h1>
+            <img src="../img/categoria-aros.jpg" alt="Aretes" class="cat1">
+            <img src="../img/categoria-pulseras.jpg" alt="Pulseras" class="cat2">
+            <img src="../img/categoria-anillos.jpg" alt="Anillos" class="cat3">
+            <img src="../img/categoria-cadenas.jpg" alt="Cadenas" class="cat4">
+            <img src="../img/categoria-collares.jpg" alt="Collares" class="cat5">
+            <img src="../img/categoria-colgantes.jpg" alt="Colgantes" class="cat6">
         </section>
     </main>
     <!---Fin contenido-->
