--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,55 +8,82 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <!---NO BORRAR - estilos css-->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!---NO BORRAR - cdn de bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
 <body>
-    <header>
-        <a href="./index.html"><img class="logo" src="./img/lumina-logo.png" alt="Logotipo"></a>
-        <div>
-            <!---Inicio Menu-->
-            <nav>
-                <ul class="identificacion">
-                    <li><a href="./pages/cuenta.html">Inicia sesión |</a></li>
-                    <li><a href="./pages/cuenta.html">Registrate</a></li>
-                </ul>
-            </nav>
-        </div>
-        
-        <nav>               
-            <ul class="menu">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/nosotros.html">Quienes somos</a></li>
-                <li><a href="./pages/joyas.html">Joyas</a></li>
-                <li><a href="./pages/joyeros.html">Joyeros</a></li>
-                <li><a href="./pages/blog.html">Blog</a></li>
-            </ul>
+   <header>
+        <!---Inicio Menu-->
+        <nav class="navbar navbar-expand-lg mainBg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html">
+                    <img src="../img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center ms-3"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">Quienes somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./joyas.html">Joyas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./joyeros.html">Joyeros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./blog.html">Blog</a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./cuenta.html">
+                                <img src="../img/avatar.png" alt="usuario" class="usuario">
+                            </a>
+                        </li>
+                    </span>
+                </div>
+            </div>
         </nav>
     </header>
     <!---Fin Menu-->
+   
     <!---Inicio Contenido-->
-    <main>
-        <h1 class="titulo">¿Cómo comprar?</h1>
-        <section>
-            <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime.</p>
+    <main class="containerBlog">
+        <h1 class="tituloBlog">¿Cómo comprar?</h1>
+        <section class="blog">
+            <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus.</p>
         </section>
-        <section>
-            <h2 class="subtitulo">Paso a paso</h2>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <h2 class="subtituloCompras">Paso a paso para comprar</h2>
+        <section  class="compras">
+            <p><strong>Paso 1:</strong> Luego de iniciar sesión puedes agregar al Carro de Compras las Joyas que desees comprar.
+            <br>
+            <strong>Paso 2:</strong> Ingresa la dirección de envío y escoge envío a Sucursal o Domicilio.
+            <br>
+            <strong>Paso 3:</strong> Finaliza tu Compra.
+            <br>
+            Desde ahora puedes elegir la opción de Despacho a Sucursal de Chilexpress o Correos de Chile o bien entrega en Domicilio, para tu mayor comodidad.
+            </p>
         </section>
     </main>
-    <!---Inicio Contenido-->
+    <!---Fin Contenido-->
     <footer>
-        <a href="./index.html"><img src="./img/lumina-logo.png" alt="Logotipo Lumina"></a>
+        <a href="../index.html">
+            <img src="../img/lumina-logo.png" alt="Logo" class="d-inline-block textoLogo"></a>
         <ul class="pie">
-            <li><a class="negrita" href="./pages/nosotros.html">Quienes somos</a></li>
-            <li><a class="negrita" href="./pages/blog.html">Blog</a><li>
+            <li><a class="negrita" href="./nosotros.html">Quienes somos</a></li>
+            <li><a class="negrita" href="./blog.html">Blog</a><li>
             <br>
             <li class="negrita">Mi cuenta:</li>
-            <li><a href="./pages/cuenta.html">Inicia sesión</a></li>
-            <li><a href="./pages/cuenta.html">Registrate</a></li>
+            <li><a href="./cuenta.html">Inicia sesión</a></li>
+            <li><a href="./cuenta.html">Registrate</a></li>
         </ul>
 
         <ul class="pie">
