--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="bg">
     <header>
         <!---Inicio Menu-->
-        <nav class="navbar navbar-expand-lg mainBg">
+        <nav class="navbar fixed-top navbar-expand-lg mainBg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center"></a>
@@ -84,7 +84,7 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
 
 
 
