--- a/pages/blog.html
+++ b/pages/blog.html
@@ -19,7 +19,7 @@
         <!---Inicio Menu-->
         <nav class="navbar navbar-expand-lg mainBg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/lumina-logo.png" alt="Logo" width="180" height="50" class="d-inline-block align-text-center ms-3"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
