agregue contenido al blog

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <!---Fin Menu-->
     <!---Inicio contenido-->
-    <main>
+    <main class="pagPrincipal">
         <div id="carouselExampleCaptions" class="carousel slide vitrina">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
