--- a/pages/blog.html
+++ b/pages/blog.html
@@ -56,24 +56,47 @@
     <!---Fin Menu-->
    
     <!---Inicio Contenido-->
-    <main class="containerBlog">
-        <h1 class="tituloBlog">¿Cómo comprar?</h1>
-        <section class="blog">
-            <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus.</p>
-        </section>
-        <h2 class="subtituloCompras">Paso a paso para comprar</h2>
-        <section  class="compras">
-            <p><strong>Paso 1:</strong> Luego de iniciar sesión puedes agregar al Carro de Compras las Joyas que desees comprar.
-            <br>
-            <strong>Paso 2:</strong> Ingresa la dirección de envío y escoge envío a Sucursal o Domicilio.
-            <br>
-            <strong>Paso 3:</strong> Finaliza tu Compra.
-            <br>
-            Desde ahora puedes elegir la opción de Despacho a Sucursal de Chilexpress o Correos de Chile o bien entrega en Domicilio, para tu mayor comodidad.
-            </p>
-        </section>
+    <main>
+        <h1 class="titulo">Blog</h1>
+    </main>
+        <div class="containerBlog">
+            <h2 class="tituloContainer tituloBlog">¿Cómo comprar y emprender?</h2>
+            <section class="blog">
+                <div class="text2">
+                Esta es una duda que surge al momento siempre al principio de empezar un emprendimiento. Muchas veces nuevos clientes invierten solo una vez porque no escogen bien los productos en su primera compra. Por eso hemos considerado recomendar qué productos serán fáciles de vender y escoger variedad. Se debe considerar:
+                <br>
+                <br>
+                <strong>1. ¿A qué publico voy a dirigir la venta?</strong> La ubicación geográfica por el tema del simbolismo dependiendo de la región tiene ciertas culturas arraigadas, por general a las personas les gusta identificarse y les da mucho valor a los símbolos. También hace referencia a factores como el clima, infiere si hace frio o calor porque algunas joyas con el frio no se pueden lucir.
+                <br>
+                <br>
+                <strong>2. ¿Ideologías de nuestros clientes?</strong> Nos caracterizamos por tener un credo o religión y eso nos hace sentir bien con nosotros mismos contar con símbolos de dichas ideologías o creencias.
+                <br>
+                <br>
+                <strong>3. ¿Estilo de las personas?</strong> Pensemos que la mayoría de las personas van más por un estilo simple y clásico, pero sí en cambio, tenemos un cliente más extrovertido y expresa su personalidad de una manera fuerte es cuando se debe tener criterio de selección al momento de la compra.
+                <br>
+                <br>
+                A modo de recomendación, comenzar con productos de uso más frecuente como los aros; tanto apegados, colgantes y argollas. Al igual que las pulseras, cadenas y algunos productos de temporada como tobilleras. Esto es debido a que en los anillos es complejo poder saber el número exacto, por lo que le recomendamos comprar medidas más usadas o bien encargar el medidor de dedos o anillos.
+                </div>
+            </section>
+            <img src="../img/paso-a-paso.png" alt="Paso a paso como comprar" class="imgCompras .img-fluid">
+            <h2 class="tituloContainer subtituloCompras">Paso a paso para comprar</h2>
+            <section  class="compras">
+                <div class="text2"><strong>Paso 1:</strong> Luego de iniciar sesión puedes ya empezar a agregar al carro de compras las joyas que desees comprar.
+                <br>
+                <strong>Paso 2:</strong> Ingresa la dirección de envío y escoge envío a sucursal o domicilio.
+                <br>
+                <strong>Paso 3:</strong> Finaliza tu compra.
+                <br>
+                Desde ahora puedes elegir la opción de despacho a Sucursal de "Chilexpress" o "Correos de Chile" o bien entrega en domicilio, para tu mayor comodidad.
+                <br>
+                <br>
+                Recuerda que por compras sobre los $50.000 en nuestra empresa, nuestros clientes se llevan de regalo kit de emprendimiento, lo que te ayudarán a dar el puntapié inicial a tu negocio y comenzar a generar ingresos.
+                </div>
+            </section>
+        </div>
     </main>
     <!---Fin Contenido-->
+     <!---Inicio pie de pagina-->
     <footer>
         <a href="../index.html">
             <img src="../img/lumina-logo.png" alt="Logo" class="d-inline-block textoLogo"></a>
