ok contenido de todas las pags

--- a/pages/joyeros.html
+++ b/pages/joyeros.html
@@ -61,6 +61,9 @@
             <img src="../img/joyero-medium.jpg" alt="Joyero medium" class="imgJoyeros">
             <img src="../img/joyero-large.jpg" alt="Joyero big" class="imgJoyeros">
         </section>
+        <section class="banner">
+            <img src="../img/envio-gratis.jpg" alt="banner envio gratis">
+        </section>
     </main>
     <!---Fin contenido-->
 
