--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,9 +56,31 @@
     <!---Inicio Contenido-->
     <main>
         <h1 class="titulo">Somos Lumina</h1>
-        <section>
-            <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime.</p>
-            <img class="imgperfil" src="../img/persona.jpeg" alt="quienes somos">
+        <section class="containerSomos">
+            <p class="Somos text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime dolorem voluptatibus? Fugiat cupiditate labore error, ipsam quam rerum repudiandae eveniet optio. Consectetur, dicta ducimus. Ea sint debitis fugit. Repellat ullam blanditiis eius sed provident minima exercitationem neque itaque libero beatae amet dolores officia, aut culpa sunt accusamus mollitia velit hic ipsum reiciendis earum rem nesciunt cum impedit! Sunt modi non quidem aliquid corrupti rerum sed obcaecati magni, ducimus consequatur facere similique nulla Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima possimus error laboriosam mollitia nesciunt. Nisi maxime necessitatibus sit fugit odio magnam dolorum eum quas corrupti maiores sed nam dolor rem dignissimos laudantium, in similique iusto delectus! Ad in quod, quibusdam neque eligendi praesentium, excepturi inventore dolores odit, porro tenetur suscipit ipsam pariatur quia. Totam quis doloribus, omnis nobis, molestias reiciendis, dolore adipisci deleniti ipsam amet minus itaque maxime.</p>
+            <img class="imgperfil .img-fluid" src="../img/persona.jpeg" alt="quienes somos">
+            <h2 class="tituloVentajas">¿Por qué elegir Lumina?</h2>
+            <div class="ventajas">
+                <div class="tarjeta">
+                    <img src="../img/somos-calidad.jpg" alt="Calidad">
+                    <h3>Calidad</h3>
+                    <p>Plata ley 925 y 950</p>
+                </div>
+                <div class="tarjeta">
+                    <img src="../img/somos-variedad.jpg" alt="Variedad">
+                    <h3>Variedad</h3>
+                    <p>Miles de productos</p>
+                </div>
+                <div class="tarjeta">
+                    <img src="../img/somos-emprendimiento.jpg" alt="Conveniencia">
+                    <h3>Conveniencia</h3>
+                    <p>Apoyamos tus proyectos con precios bajos</p>
+                </div>
+                <div class="tarjeta">
+                    <img src="../img/somos-envio-express.jpg" alt="Envio rápido">
+                    <h3>Envio rápido</h3>
+                    <p>en un máximo de 48hrs</p>
+                </div>
         </section>
     </main>
     <!---Inicio Contenido-->
