--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <!---Fin Menu-->
     <!---Inicio contenido-->
-    <main class="pagPrincipal">
+    <main>
         <div id="carouselExampleCaptions" class="carousel slide vitrina">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,14 +62,14 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/vitrina-joyas.jpeg" class="d-block w-100 vitrina" alt="vitrina joyas">
+                    <img src="./img/vitrina-joyas-dos.jpg" class="d-block w-100 vitrina" alt="vitrina joyas">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="titulo-vitrina">+1000 productos</h3>
                         <p class="texto-vitrina">El mejor lugar para encontrar tu joya perfecta</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/vitrina-dos.jpeg" class="d-block w-100 vitrina" alt="vitrina dos">
+                    <img src="img/vitrina-joyas.jpg" class="d-block w-100 vitrina" alt="vitrina dos">
                     <div class="carousel-caption d-none d-md-block">
                         <h3 class="titulo-vitrina">¡20%DCTO!</h3>
                         <p class="texto-vitrina">La pulsera perfecta porfin ha llegado</p>
