ignore algunos jpg

--- a/index.html
+++ b/index.html
@@ -85,12 +85,7 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-
-
-        <!---<img src="./img/vitrina-joyas.jpeg" alt="vitrina" class="vitrina">-->
-        <!---Inicio categorias
-        <h1 class="titulo">Categorias</h1>-->
+        <!---Inicio categorias-->
         <section class="categorias">
             <div class="tarjeta">
                 <img class="icono" src="./img/anillo-de-brillantes.png" alt="anillo">
@@ -109,7 +104,6 @@
                 <p>Pulseras</p>
             </div> 
         </section>
-
         <!---inicio productos precio-->
         <h2 class="subtitulo">Complementa tu outfit con los productos más tops</h2>
         <section class="productos">
@@ -139,13 +133,11 @@
                 <p class="precio">$19.990</p> 
             </div>
         </section>
-        
         <div class="botonver">
             <button type="button" class="vertodo">
                 <a class="vertodo-texto" href="./pages/joyas.html">ver todo joyas</a>
             </button>
         </div>
-
     </main>
     <!---Fin contenido-->
 
