ajuste index a mb

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./img/vitrina-joyas-dos.jpg" class="d-block w-100 vitrina" alt="vitrina joyas">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h3 class="titulo-vitrina">+1000 productos</h3>
-                        <p class="texto-vitrina">El mejor lugar para encontrar tu joya perfecta</p>
+                        <p class="texto-vitrina">Todo para encontrar tu joya perfecta</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/vitrina-joyas.jpg" class="d-block w-100 vitrina" alt="vitrina dos">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h3 class="titulo-vitrina">¡20%DCTO!</h3>
                         <p class="texto-vitrina">La pulsera perfecta porfin ha llegado</p>
                     </div>
