--- a/pages/joyas.html
+++ b/pages/joyas.html
@@ -56,14 +56,14 @@
     <!---Inicio contenido-->
     <main>
         <!---Inicio categorias-->
-        <section class="container">
-            <h1 class="tituloGrid">Joyas</h1>
-            <img src="../img/categoria-aros.jpg" alt="Aretes" class="cat1">
-            <img src="../img/categoria-pulseras.jpg" alt="Pulseras" class="cat2">
-            <img src="../img/categoria-anillos.jpg" alt="Anillos" class="cat3">
-            <img src="../img/categoria-cadenas.jpg" alt="Cadenas" class="cat4">
-            <img src="../img/categoria-collares.jpg" alt="Collares" class="cat5">
-            <img src="../img/categoria-colgantes.jpg" alt="Colgantes" class="cat6">
+        <h1 class="tituloGrid">Joyas</h1>
+        <section class="container slider-container">
+            <img src="../img/categoria-aros.jpg" alt="Aretes" class="cat1 slider-item">
+            <img src="../img/categoria-pulseras.jpg" alt="Pulseras" class="cat2 slider-item">
+            <img src="../img/categoria-anillos.jpg" alt="Anillos" class="cat3 slider-item">
+            <img src="../img/categoria-cadenas.jpg" alt="Cadenas" class="cat4 slider-item">
+            <img src="../img/categoria-collares.jpg" alt="Collares" class="cat5 slider-item">
+            <img src="../img/categoria-colgantes.jpg" alt="Colgantes" class="cat6 slider-item">
         </section>
     </main>
     <!---Fin contenido-->
