ajuste estilo responsivo

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
         <!---Inicio categorias-->
         <section class="categorias">
             <div class="tarjeta">
-                <img class="icono" src="./img/anillo-de-brillantes.png" alt="anillo">
+                <img class="icono img-fluid" src="./img/anillo-de-brillantes.png" alt="anillo">
                 <p>Anillos</p>
             </div>
             <div class="tarjeta">
-                <img class="icono" src="./img/aretes.png" alt="aretes">
+                <img class="icono img-fluid" src="./img/aretes.png" alt="aretes">
                 <p>Aretes</p>
             </div>
             <div class="tarjeta">
-                <img class="icono" src="./img/collar.png" alt="collar">
+                <img class="icono img-fluid" src="./img/collar.png" alt="collar">
                 <p>Collares</p>
             </div>
             <div class="tarjeta">
-                <img class="icono" src="./img/pulsera.png" alt="pulsera">
+                <img class="icono img-fluid" src="./img/pulsera.png" alt="pulsera">
                 <p>Pulseras</p>
             </div> 
         </section>
         <!---inicio productos precio-->
         <h2 class="subtitulo">Complementa tu outfit con los productos más tops</h2>
-        <section class="productos">
+        <section class="producto slider-productos">
             <div class="tarjeta2">
                 <img class="joya" src="./img/anillo-etnico.jpg" alt="Anillo etnico">
                 <p>Anillo étnico de plata 925</p>
