--- a/pages/joyas.html
+++ b/pages/joyas.html
@@ -58,12 +58,12 @@
         <!---Inicio categorias-->
         <h1 class="tituloGrid">Joyas</h1>
         <section class="container slider-container">
-            <img src="../img/categoria-aros.jpg" alt="Aretes" class="cat1 slider-item">
-            <img src="../img/categoria-pulseras.jpg" alt="Pulseras" class="cat2 slider-item">
-            <img src="../img/categoria-anillos.jpg" alt="Anillos" class="cat3 slider-item">
-            <img src="../img/categoria-cadenas.jpg" alt="Cadenas" class="cat4 slider-item">
-            <img src="../img/categoria-collares.jpg" alt="Collares" class="cat5 slider-item">
-            <img src="../img/categoria-colgantes.jpg" alt="Colgantes" class="cat6 slider-item">
+            <img src="../img/categoria-aros.jpg" alt="Aros de plata" class="cat1 rounded img-fluid">
+            <img src="../img/categoria-pulseras.jpg" alt="Pulseras" class="cat2 rounded img-fluid">
+            <img src="../img/categoria-anillos.jpg" alt="Anillos de plata" class="cat3 rounded img-fluid">
+            <img src="../img/categoria-cadenas.jpg" alt="Cadenas de plata" class="cat4 rounded img-fluid">
+            <img src="../img/categoria-collares.jpg" alt="Collares de plata" class="cat5 rounded img-fluid">
+            <img src="../img/categoria-colgantes.jpg" alt="Colgantes de plata" class="cat6 rounded img-fluid">
         </section>
     </main>
     <!---Fin contenido-->
