--- a/pages/joyeros.html
+++ b/pages/joyeros.html
@@ -56,12 +56,12 @@
     <!---Inicio contenido-->
     <main>
         <h1 class="titulo">Joyeros</h1>
-        <section class="contenedorJoyeros"><!---Inicio categorias-->
-            <img src="../img/joyero-small.jpg" alt="Joyero small" class="imgJoyeros">
-            <img src="../img/joyero-medium.jpg" alt="Joyero medium" class="imgJoyeros">
-            <img src="../img/joyero-large.jpg" alt="Joyero big" class="imgJoyeros">
+        <section class="contenedorJoyeros slider-joyeros"><!---Inicio categorias-->
+            <img src="../img/joyero-small.jpg" alt="Joyero small" class="imgJoyeros rounded img-fluid">
+            <img src="../img/joyero-medium.jpg" alt="Joyero medium" class="imgJoyeros rounded img-fluid">
+            <img src="../img/joyero-large.jpg" alt="Joyero big" class="imgJoyeros rounded img-fluid">
         </section>
-        <section class="banner">
+        <section class="banner rounded">
             <img src="../img/envio-gratis.jpg" alt="banner envio gratis">
         </section>
     </main>
