ok todas las paginas responsivas

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -78,7 +78,7 @@
                 A modo de recomendación, comenzar con productos de uso más frecuente como los aros; tanto apegados, colgantes y argollas. Al igual que las pulseras, cadenas y algunos productos de temporada como tobilleras. Esto es debido a que en los anillos es complejo poder saber el número exacto, por lo que le recomendamos comprar medidas más usadas o bien encargar el medidor de dedos o anillos.
                 </div>
             </section>
-            <img src="../img/paso-a-paso.png" alt="Paso a paso como comprar" class="imgCompras .img-fluid">
+            <img src="../img/paso-a-paso.png" alt="Paso a paso como comprar" class="imgCompras img-fluid">
             <h2 class="tituloContainer subtituloCompras">Paso a paso para comprar</h2>
             <section  class="compras">
                 <div class="text2"><strong>Paso 1:</strong> Luego de iniciar sesión puedes ya empezar a agregar al carro de compras las joyas que desees comprar.
