--- a/pages/cuenta.html
+++ b/pages/cuenta.html
@@ -59,7 +59,7 @@
         <h1 class="titulo">Identificación</h1>
 
         <div class="containerUsuario">
-            <h2 class="tituloCuenta">Registrate</h2>
+            <h2 class="tituloCuenta container-fluid">Registrate</h2>
             <section class="formularioRegistro">
                 <form action="">
                     <fieldset>
@@ -99,7 +99,7 @@
             
             </section>
 
-            <h2 class="tituloCuenta">Inicia sesión</h2>
+            <h2 class="tituloCuenta container-fluid">Inicia sesión</h2>
             <section  class="formularioInicio">
                 <form action="">
                     <fieldset>
