--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/ln-favicon.ico">
-    <title>Inicio</title>
+    <title>Joyeria Lumina</title>
+    <meta name="description" content="Proyecto para curso de web. En esta sección vas a encontrar una variedad de joyas de plata y oro perfectas para ti">
+    <meta name="keywords" content="joyerias, joyas, plata, oro, estilo, accesorios">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
