--- a/pages/joyeros.html
+++ b/pages/joyeros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/ln-favicon.ico">
-    <title>Joyeros</title>
+    <title>Lumina - Joyeros</title>
+    <meta name="description" content="Proyecto para curso de web. En esta sección encontrarás una variedad de joyeros que tenemos para que puedas viajar con tus joyas a todas partes">
+    <meta name="keywords" content="joyeros viaje organizadores">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
